# oxprint

./: justfile
backend/: .env.example  .gitignore  Cargo.toml
backend/config/: default.toml
backend/migrations/: 20251106002641_001_initial.down.sql  20251106002641_001_initial.up.sql
backend/src/: main.rs
backend/src/config/: settings.rs
backend/src/database/: connection.rs
backend/src/handlers/: mod.rs  static_files.rs  websocket.rs
backend/src/handlers/api/: mod.rs  system.rs
backend/src/middleware/: cors.rs
backend/src/utils/: errors.rs  mod.rs
backend/static/: index.html
frontend/: .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/@types/: api.ts
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  index.tsx
