[package]
name = "oxprint-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "query", "http2", "ws"] }
axum-extra = { version = "0.12.1", features = ["typed-header"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
dotenvy = "0.15.7"
hyper = { version = "1.7.0", features = ["full"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
mime_guess = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "macros"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "fs", "cors", "compression-gzip"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
